welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:28: error: value to7 is not a member of Int
    for(i<-1 to7) {
             ^